<resources>
    <string name="app_name">MyKKLUnissula</string>
    <string name="welcome_to">Welcome to</string>
    <string name="kkl">KULIAH KERJA LAPANGAN MAGISTER KENOTARIATAN FAKULTAS HUKUM UNISSULA SEMARANG</string>
    <string name="nim_anda">Masukkan NIM anda...</string>
    <string name="pass">Masukkan Password anda...</string>
    <string name="masuk">Masuk</string>
    <string name="login">Login</string>
    <string name="text_register2">Register disini</string>
    <string name="text_register">Belum punya akun?</string>
    <string name="konfirmasi_password_anda">Konfirmasi password anda</string>
    <string name="register">Register</string>
    <string name="text_home_kkl">KULIAH KERJA LAPANGAN MAGISTER KENOTARIATAN FAKULTAS HUKUM UNISSULA SEMARANG</string>
    <string name="text_card_1">KULIAH KERJA LAPANGAN LUAR NEGERI</string>
    <string name="daftar">DAFTAR</string>
    <string name="text_card_2">KULIAH KERJA LAPANGAN DALAM NEGERI</string>
    <string name="text_card_3">DATA MAHASISWA YANG SUDAH TERDAFTAR</string>
    <string name="kklluarnegeri">Pendaftaran KKL Luar Negeri</string>
    <string name="Isidata">Isi Data Dibawah ini!</string>
    <string name="nama">Nama Lengkap</string>
    <string name="nim">NIM</string>
    <string name="nohp">Nomor Telepon</string>
    <string name="jeniskelamin">Jenis Kelamin</string>
    <string name="laki">Laki Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="smtkelas">Semester dan kelas *cth : 7/RK4C</string>
    <string name="tglberangkat">Tanggal keberangkatan</string>
    <string name="tglpulang">Tanggal kepulangan</string>
    <string name="email">Email</string>
    <string name="wajib">Wajib Upload File</string>
    <string name="scanktp">Scan KTP</string>
    <string name="scanfoto">Scan Pas Foto</string>
    <string name="scanpas">Scan Paspor</string>
    <string name="simpan">Simpan</string>
    <string name="kotaberangkat">Kota keberangkatan</string>
    <string name="kotapulang">Kota kepulangan</string>
    <string name="andayakin">Anda yakin untuk menyimpan\ndata ?</string>
    <string name="yakin">Yakin</string>
    <string name="batal">Batalkan</string>
    <string name="selamat">Selamat Data Anda berhasil tersimpan, Admin Akan Segera Menghubungi Anda\nSilahkan Klik Untuk Melihat Data anda</string>
    <string name="lihat">Lihat</string>
    <string name="kkldalamnegeri">Pendaftaran KKL Dalam Negeri</string>
    <string name="dataanda">Data Anda</string>
    <string name="dataterdaftar">Data Terdaftar</string>
    <string name="smtkela">Semester dan Kelas</string>
    <string name="datadokumen">Data Dokumen</string>
    <string name="hapus">Hapus</string>
    <string name="update">Update</string>
    <string name="hapusdata">Apakah anda yakin ingin menghapus\ndata ini?</string>
    <string name="dataterhapus">Data anda berhasil dihapus</string>
    <string name="oke">Oke</string>
    <string name="updateData">Data anda berhasil diupdate</string>
    <string name="updateQuestion">Anda yakin ingin mengupdate\ndata ini?</string>
    <string name="data_kkl_dalam_negeri">Data KKL Dalam Negeri</string>
    <string name="data_kkl_luar_negeri">Data KKL Luar Negeri</string>
    <string name="profile">Profile</string>
    <string name="textprofile">DATA PROFILE</string>
    <string name="scanbukti">Bukti Pembayaran</string>
    <string name="emptyluar">Anda belum melakukan pendaftaran untuk\nKKL Luar Negeri</string>
    <string name="emptydalam">Anda belum melakukan pendaftaran untuk\nKKL Dalam Negeri</string>
    <string name="logout">Anda yakin ingin keluar?</string>
</resources>