<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:padding="10dp"
                android:id="@+id/iv_logo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/img_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/welcome_to"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

            <TextView
                android:id="@+id/tv_kkl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/text_home_kkl"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

            <ImageButton
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/lets_icons_back"
                android:layout_marginTop="30dp"
                app:layout_constraintHorizontal_bias="0.033"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_kkl" />

            <LinearLayout
                android:id="@+id/card_ln"
                android:layout_width="321dp"
                android:layout_height="153dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/rectangle_shadow1"
                app:layout_constraintTop_toBottomOf="@+id/btn_logout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="220dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_bold"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/text_card_1"/>
                
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_ln"
                    android:layout_width="151dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="15dp"
                    android:drawableStart="@drawable/baseline_arrow_forward_24"
                    android:paddingHorizontal="29dp"
                    android:text="@string/daftar"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_rectangle1"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/card_dn"
                android:layout_width="321dp"
                android:layout_height="153dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/rectangle_shadow1"
                app:layout_constraintTop_toBottomOf="@+id/card_ln"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="220dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_bold"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/text_card_2"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_dn"
                    android:layout_width="151dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="15dp"
                    android:drawableStart="@drawable/baseline_arrow_forward_24"
                    android:paddingHorizontal="29dp"
                    android:text="@string/daftar"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_rectangle1"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/card_dm"
                android:layout_width="321dp"
                android:layout_height="153dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/rectangle_shadow1"
                app:layout_constraintTop_toBottomOf="@+id/card_dn"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="220dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_bold"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/text_card_3"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_pendaftar"
                    android:layout_width="151dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="15dp"
                    android:drawableStart="@drawable/baseline_arrow_forward_24"
                    android:paddingHorizontal="29dp"
                    android:text="@string/daftar"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_rectangle1"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>